--- a/drawings-pencil.html
+++ b/drawings-pencil.html
@@ -36,11 +36,11 @@
             </a>
             <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="drawings-pencil.html">Pencil</a>
-              <a class="dropdown-item" href="Drawings">Color</a>
+              <a class="dropdown-item" href="#">Color</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Luiza Palsi's" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Paintings
             </a>
