--- a/index.html
+++ b/index.html
@@ -30,40 +30,40 @@
         <ul class="navbar-nav ml-auto">
 
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Luiza Palsi's" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Drawings
             </a>
             <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="drawings-pencil.html">Pencil</a>
-              <a class="dropdown-item" href="Drawings">Color</a>
+              <a class="dropdown-item" href="#">Color</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Luiza Palsi's" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Paintings
             </a>
             <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="Paintings">Water color</a>
-              <a class="dropdown-item" href="Paintings">Oil</a>
-              <a class="dropdown-item" href="Paintings">Gouache</a>
+              <a class="dropdown-item" href="#">Water color</a>
+              <a class="dropdown-item" href="#">Oil</a>
+              <a class="dropdown-item" href="#">Gouache</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Luiza Palsi's" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Others
 
 
             </a>
             <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="Others">Works</a>
-              <a class="dropdown-item" href="Others">Make up</a>
+              <a class="dropdown-item" href="#">Works</a>
+              <a class="dropdown-item" href="#">Make up</a>
             </div>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="Luiza Palsi's" id="navbarDropdownMenuLink" role="button"
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               About me
             </a>
