--- a/drawings-color.html
+++ b/drawings-color.html
@@ -82,25 +82,19 @@
       <div class="col-10">
         <div class="card-columns">
           <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_5324%201.svg" alt="Card image cap"
-              data-target="#carouselExample" data-slide-to="0">
+            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_1800%20(1)%201%20(1).svg"
+              alt="Card image cap" data-target="#carouselExample" data-slide-to="0">
           </div>
           <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_6527%202.svg" alt="Card image cap"
+            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_2873%201.svg" alt="Card image cap"
               data-target="#carouselExample" data-slide-to="1">
           </div>
+
           <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
-              alt="Card image cap" data-target="#carouselExample" data-slide-to="2">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg" alt="Card image cap"
+            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_3343%201.svg" alt="Card image cap"
               data-target="#carouselExample" data-slide-to="3">
           </div>
-          <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg" alt="Card image cap"
-              data-target="#carouselExample" data-slide-to="4">
-          </div>
+
 
 
         </div>
@@ -121,20 +115,14 @@
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_5324%201.svg" alt="First slide">
+                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_1800%20(1)%201%20(1).svg"
+                  alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_6527%202.svg" alt="Second slide">
+                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_2873%201.svg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
-                  alt="Third slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg" alt="Fourth slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg" alt="Fitfth slide">
+                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_3343%201.svg" alt="Third slide">
               </div>
 
             </div>
@@ -171,6 +159,7 @@
 
 
 
+
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
@@ -184,5 +173,3 @@
     crossorigin="anonymous"></script>
 
 </body>
-
-</html>
