--- a/paintings-oil.html
+++ b/paintings-oil.html
@@ -54,12 +54,20 @@
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Others
             </a>
+            <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
+         
+              <a class="dropdown-item" href="others.html">Works</a>
+
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
               data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               About me
             </a>
+            <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
+         
+              <a class="dropdown-item" href="aboutme.html">About me</a>
+
       </div>
       </li>
       </ul>
