--- a/drawings-pencil.html
+++ b/drawings-pencil.html
@@ -74,7 +74,7 @@
       <div class="col-10">
         <div class="card-columns">
           <div class="card">
-            <img class="card-img-top" src="IMG_7339 1.png" alt="Card image cap"
+            <img class="card-img-top" src="drawings/pliiats1.jpg" alt="Card image cap"
               data-target="#carouselExample" data-slide-to="0">
           </div>
           <div class="card">
