--- a/drawings-pencil.html
+++ b/drawings-pencil.html
@@ -2,179 +2,171 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Document</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
 </head>
 
 <body>
 
-  <div class="container-fluid bg-black">
+<div class="container-fluid bg-black">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-transparent">
-      <a class="navbar-brand" href="#">Luiza Palsi's</a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ml-auto">
+        <a class="navbar-brand" href="#">Luiza Palsi's</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ml-auto">
 
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Drawings
-            </a>
-            <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="drawings-pencil.html">Pencil</a>
-              <a class="dropdown-item" href="drawings-color.html">Color</a>
-            </div>
-          </li>
-      <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-          data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-          Paintings
-        </a>
-        <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
-          <a class="dropdown-item" href="paintings-oil.html">Oil</a>
-          <a class="dropdown-item" href="paintings-couaghe.html">Gouache</a>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Drawings
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="drawings-pencil.html">Pencil</a>
+                        <a class="dropdown-item" href="drawings-color.html">Color</a>
+                    </div>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Paintings
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-center" aria-labelledby="navbarDropdownMenuLink">
+                        <a class="dropdown-item" href="paintings-oil.html">Oil</a>
+                        <a class="dropdown-item" href="paintings-couaghe.html">Gouache</a>
+                    </div>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="others.html">Others</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="aboutme.html">About me</a>
+                </li>
+
+            </ul>
         </div>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="others.html" >Others</a>
-      </li>
-        </a>
-    
-    </li>
-      
-      </div>
-      <li class="nav-item">
-        <a class="nav-link" href="aboutme.html" >About me</a>
-      </li> 
-
-        </ul>
-      </div>
     </nav>
 
 
-
-
-
-
     <div class="row mt-5 p-5 justify-content-end" id="gallery" data-toggle="modal" data-target="#exampleModal">
-      <div class="col-10">
-        <div class="card-columns">
-          <div class="card">
-            <img class="card-img-top" src="drawings/pliiats1.jpg" alt="Card image cap"
-              data-target="#carouselExample" data-slide-to="0">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="file:////GitHub/ekaportfoolio/drawings/IMG_73391.jpg" alt="Card image cap"
-              data-target="#carouselExample" data-slide-to="1">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
-              alt="Card image cap" data-target="#carouselExample" data-slide-to="2">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg" alt="Card image cap"
-              data-target="#carouselExample" data-slide-to="3">
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg" alt="Card image cap"
-              data-target="#carouselExample" data-slide-to="4">
-          </div>
+        <div class="col-10">
+            <div class="card-columns">
+                <div class="card">
+                    <img class="card-img-top" src="drawings/pliiats1.jpg" alt="Card image cap"
+                         data-target="#carouselExample" data-slide-to="0">
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="file:////GitHub/ekaportfoolio/drawings/IMG_73391.jpg"
+                         alt="Card image cap"
+                         data-target="#carouselExample" data-slide-to="1">
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
+                         alt="Card image cap" data-target="#carouselExample" data-slide-to="2">
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg"
+                         alt="Card image cap"
+                         data-target="#carouselExample" data-slide-to="3">
+                </div>
+                <div class="card">
+                    <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg"
+                         alt="Card image cap"
+                         data-target="#carouselExample" data-slide-to="4">
+                </div>
 
-
-        </div>
-
-      </div>
-    </div>
-
-  </div>
-  <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="modal-dialog modal-xl modal-full" role="document">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-          </button>
-        </div>
-        <div class="modal-body">
-          <div id="carouselExample" class="carousel slide">
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block" src="IMG_7339 1.png" alt="First slide">
-                <p>test</p>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_6527%202.svg" alt="Second slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
-                  alt="Third slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg" alt="Fourth slide">
-              </div>
-              <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg" alt="Fitfth slide">
-              </div>
 
             </div>
-            <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="sr-only">Next</span>
-            </a>
-          </div>
+
         </div>
-      </div>
     </div>
-  </div>
+
+</div>
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="modal-dialog modal-xl modal-full" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div id="carouselExample" class="carousel slide">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img class="d-block" src="IMG_7339 1.png" alt="First slide">
+                            <p>test</p>
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_6527%202.svg"
+                                 alt="Second slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
+                                 alt="Third slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg"
+                                 alt="Fourth slide">
+                        </div>
+                        <div class="carousel-item">
+                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg"
+                                 alt="Fitfth slide">
+                        </div>
+
+                    </div>
+                    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
-
-  <div class="row ">
+<div class="row ">
     <div class="col–12">
 
 
     </div>
-  </div>
+</div>
 
-  <div class="social">
+<div class="social">
     <div><a href="https://www.instagram.com/lu_p._/"><img width="32px" height="32px" src="instagram.svg"></a></div>
     <div><a href="https://www.facebook.com/luiza.palsi"><img width="32px" height="32px" src="facebook.svg"></a></div>
-  </div>
+</div>
 
 
-
-
-
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-    crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
 
 </body>
 
