--- a/drawings-color.html
+++ b/drawings-color.html
@@ -52,13 +52,10 @@
       <li class="nav-item">
         <a class="nav-link" href="others.html" >Others</a>
       </li>
-    </a>
-      </div>
-      </li>
       <li class="nav-item">
         <a class="nav-link" href="aboutme.html" >About me</a>
       </li> 
-
+  
   </ul>
 </div>
 </nav>
@@ -72,16 +69,16 @@
       <div class="col-10">
         <div class="card-columns">
           <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_1800%20(1)%201%20(1).svg"
+            <img class="card-img-top" src="drawings/color1.jpg"
               alt="Card image cap" data-target="#carouselExample" data-slide-to="0">
           </div>
           <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_2873%201.svg" alt="Card image cap"
+            <img class="card-img-top" src="drawings/color2.jpg" alt="Card image cap"
               data-target="#carouselExample" data-slide-to="1">
           </div>
 
           <div class="card">
-            <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_3343%201.svg" alt="Card image cap"
+            <img class="card-img-top" src="drawings/color3.jpg" alt="Card image cap"
               data-target="#carouselExample" data-slide-to="3">
           </div>
 
@@ -105,14 +102,14 @@
           <div id="carouselExample" class="carousel slide">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_1800%20(1)%201%20(1).svg"
+                <img class="d-block" src="drawings/color1.jpg"
                   alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_2873%201.svg" alt="Second slide">
+                <img class="d-block" src="drawings/color2.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_3343%201.svg" alt="Third slide">
+                <img class="d-block" src="drawings/color3.jpg" alt="Third slide">
               </div>
 
             </div>
