--- a/drawings-pencil.html
+++ b/drawings-pencil.html
@@ -69,21 +69,21 @@
                          data-target="#carouselExample" data-slide-to="0">
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="file:////GitHub/ekaportfoolio/drawings/IMG_73391.jpg"
+                    <img class="card-img-top" src="drawings/pliiats2.jpg"
                          alt="Card image cap"
                          data-target="#carouselExample" data-slide-to="1">
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
+                    <img class="card-img-top" src="drawings/pliiats3.jpg"
                          alt="Card image cap" data-target="#carouselExample" data-slide-to="2">
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg"
+                    <img class="card-img-top" src="drawings/pliiats4.jpg"
                          alt="Card image cap"
                          data-target="#carouselExample" data-slide-to="3">
                 </div>
                 <div class="card">
-                    <img class="card-img-top" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg"
+                    <img class="card-img-top" src="drawings/pliiats5.jpg"
                          alt="Card image cap"
                          data-target="#carouselExample" data-slide-to="4">
                 </div>
@@ -107,23 +107,23 @@
                 <div id="carouselExample" class="carousel slide">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img class="d-block" src="IMG_7339 1.png" alt="First slide">
+                            <img class="d-block" src="drawings/pliiats1.jpg" alt="First slide">
                             <p>test</p>
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_6527%202.svg"
+                            <img class="d-block" src="drawings/pliiats2.jpg"
                                  alt="Second slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_1805%20(1)%201%20(1).svg"
+                            <img class="d-block" src="drawings/pliiats3.jpg"
                                  alt="Third slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7339%201.svg"
+                            <img class="d-block" src="drawings/pliiats4.jpg"
                                  alt="Fourth slide">
                         </div>
                         <div class="carousel-item">
-                            <img class="d-block" src="file:///Users/kasutaja/Downloads/IMG_7338%201.svg"
+                            <img class="d-block" src="drawings/pliiats5.jpg"
                                  alt="Fitfth slide">
                         </div>
 
