piltidekirjeldus, about me

--- a/drawings-color.html
+++ b/drawings-color.html
@@ -104,12 +104,21 @@
               <div class="carousel-item active">
                 <img class="d-block" src="drawings/color1.jpg"
                   alt="First slide">
+                  <p>"Three works with different techniques" 1/3</p>
+                  <p>2019</p>
+                  <p>This color pencil work is part of the three artworks. Made as a highschool thesis project. Since I challannged myself in using unfimiliar materials. Artwork is done after a photo that has me in it.</p>
               </div>
               <div class="carousel-item">
                 <img class="d-block" src="drawings/color2.jpg" alt="Second slide">
+                <p>"Sea"</p>
+                <p>2015</p>
+                <p>This drawing has been done outside of Viimsi Artschool as a lesson exercise.</p>
               </div>
               <div class="carousel-item">
                 <img class="d-block" src="drawings/color3.jpg" alt="Third slide">
+                <p>"Photo replication"</p>
+                <p>2015</p>
+                <p>This color drawing have been done after a given photo of a celebrity in Viimsi Artschool as part of the exercise.</p>
               </div>
 
             </div>
