--- a/others.html
+++ b/others.html
@@ -108,22 +108,39 @@
                   <div class="carousel-inner">
                       <div class="carousel-item active">
                           <img class="d-block" src="drawings/others1.jpg" alt="First slide">
+                          <p>"Dry needle"</p>
+                          <p>2018</p>
+                          <p>This peace was done on seethrough plastic surface and carved out with a dry needle. After scraping the drawing, the black paint was rubbed in and then transfered to printing press. This peace was done in Tallinn Artschool.</p>
                       </div>
                       <div class="carousel-item">
                           <img class="d-block" src="drawings/others2.jpg" alt="Second slide">
+                          <p>"Model"</p>
+                          <p>2020</p>
+                          <p>This peace is done with charcoal after live model. Probably one of the first charcoal drawings I have done in Estonia Art Academy, in the Pre-Liberal Arts courses.</p>
                       </div>
                       <div class="carousel-item">
                           <img class="d-block" src="drawings/others3.jpg" alt="Third slide">
+                          <p>"Social media"</p>
+                          <p>2018</p>
+                          <p>This installation depicts affects of social media on humans and their feelings.Done in Tallinn Artschool.</p>
                       </div>
                       <div class="carousel-item">
                           <img class="d-block" src="drawings/others4.jpg" alt="Fourth slide">
+                          <p>"Peace"</p>
+                          <p>2018</p>
+                          <p>This printing press work has been done for concurs, in Talinn Artschool. It depicts a road and a heartbeat for the backround. This work has been done also in multiple other colors. </p>
                       </div>
                       <div class="carousel-item">
                           <img class="d-block" src="drawings/others5.jpg" alt="Fitfth slide">
+                          <p>"Self-portrait"</p>
+                          <p>2017</p>
+                          <p>One of the first printing press works I have done in Tallinn Artschool. Drawing was carved into the peace of soft floor panel and then colored.</p>
                       </div>
                       <div class="carousel-item">
                           <img class="d-block" src="drawings/others6.jpg" alt="Fitfth slide">
-
+                          <p>"Test"</p>
+                          <p>2019</p>
+                          <p>This girl portrait was done in watercolor and then traced out with black pen. This work has been porpously done to practice.</p>
                   </div>
                   <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
                       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
