--- a/drawings-pencil.html
+++ b/drawings-pencil.html
@@ -108,23 +108,37 @@
                     <div class="carousel-inner">
                         <div class="carousel-item active">
                             <img class="d-block" src="drawings/pliiats1.jpg" alt="First slide">
-                            <p>test</p>
+                            <p>"Portrait"</p>
+                            <p>2017</p>
+                            <p>This work was part of the Tallinn Artschool lesson exercise. We had a live model, who we had to sketch out in short period of time.</p>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block" src="drawings/pliiats2.jpg"
                                  alt="Second slide">
+                                 <p>"Davids eyes"</p>
+                                 <p>2017</p>
+                                 <p>Drawn after a sculpture in Tallinn Artschool. </p>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block" src="drawings/pliiats3.jpg"
                                  alt="Third slide">
+                                 <p>"Sketches"</p>
+                                 <p>2017</p>
+                                 <p>These furniture peaces have been drawn in Tallinn Artschool. Drawn in different angles as an exercise.</p>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block" src="drawings/pliiats4.jpg"
                                  alt="Fourth slide">
+                                 <p>"Mirroring"</p>
+                                 <p>2015</p>
+                                 <p>This work was done in Viimsi Artschool as an lesson exercise.</p>
                         </div>
                         <div class="carousel-item">
                             <img class="d-block" src="drawings/pliiats5.jpg"
                                  alt="Fitfth slide">
+                                 <p>"Portrait"</p>
+                                 <p>2017</p>
+                                 <p>This portrait was done in short period of time from an alive model, in Tallinn Artschool.</p>
                         </div>
 
                     </div>
